--- a/playground/style.css
+++ b/playground/style.css
@@ -47,6 +47,7 @@ body {
 }
 
 .rc {
+  height: calc(100% - 48px);
   overflow-y: auto;
 }
 .right-pane {
